@@ -1,5 +1,14 @@
 2002-01-16  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 02840]
+	* scripts/w3mmail.cgi.in: use LOCAL_COOKIE
+	* scripts/w3mmail.cgi.in: no need HTTP response header
+	* scripts/w3mmail.cgi.in: fix typo $nkf_NKF
+	* scripts/w3mmail.cgi.in: eval { use NKF; } is perl5ism
+	* scripts/multipart/multipart.cgi.in: ditto
+
+2002-01-16  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 02835]
 	* rc.c: move label_topline, nextpage_topline from param3 to param1
 		param7 is SSL Setting
